Updated homepage main photo of cat to fix overlap bug

--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,13 @@ body {
   overflow: hidden;
 }
 
+/* removes white bar at the top of image at 950px */
+@media (min-width: 640px) {
+  .headliner__img-wrapper {
+    height: 100%;
+  }
+}
+
 .headliner__img {
   width: 100%;
   height: 100%;
@@ -149,11 +156,19 @@ body {
   color: #3573d4;
 }
 
+/* changed to correct an issue when site is 1024-1199 px wide in which the hero image overlaps the elements below it. */
 .headliner-one__img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   object-fit: cover;
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
+}
+
+/* changed from 1024 to 1200px */
+@media (min-width: 1200px) {
+  .headliner-one__img {
+    height: 100%;
+  }
 }
 
 .headliner-one__info {
@@ -387,10 +402,10 @@ body {
 }
 
 .menu {
+  grid-column: 1 / -1;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  grid-column: 1 / -1;
 }
 
 .articles {
@@ -416,10 +431,10 @@ body {
 }
 
 .headliners {
+  grid-column: 2 / -2;
   display: grid;
   grid-template-columns: repeat(14, 1fr);
   grid-gap: 16px;
-  grid-column: 2 / -2;
 }
 
 .headliner-one__img,
@@ -440,8 +455,8 @@ body {
 }
 
 .sidebar {
-  grid-column: 2 / -2;
   align-self: start;
+  grid-column: 2 / -2;
 }
 
 .top__item {
@@ -585,6 +600,7 @@ body {
 }
 
 /* GALLERY LAYOUT */
+
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -691,27 +707,25 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
-
 .event-form__info {
   flex: 1 1 425px;
+  /*  flex: minmax(425px, auto); */
 }
-
 .event-form__tip {
-  display: flex;
   flex: 3 1 500px;
+  /*  flex: minmax(500px, 3fr); */
+  display: flex;
   flex-direction: column;
 }
-
 .event-form__field {
   display: flex;
   flex-wrap: wrap;
   flex: 1;
 }
-
 .event-form__input {
   flex: 1 1 275px;
+  /* flex-basis: 275px; */
 }
-
 .event-form__submit {
   align-self: flex-end;
 }
